# hass-mcp

./: .coverage  Dockerfile  Taskfile.yml  bandit-report.json  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
.task/checksum/: install
app/: __main__.py  config.py  hass.py  run.py  server.py
tests/: conftest.py  test_config.py  test_coverage_focused.py  test_hass.py  test_hass_comprehensive.py  test_hass_extended.py  test_main.py  test_run.py  test_server.py  test_server_comprehensive.py  test_server_extended.py
